--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -255,3 +255,11 @@ html, body {
   height: 100% !important;
   display: block;
 }
+
+/* Action column Layout fix (removes display:inline */
+.action-group {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+}
